NGP-TWC/wdp-abstract-canvas#946 fix gap in wideflyout when using a mouse (#1111)

--- a/canvas_modules/common-canvas/assets/styles/common-canvas.css
+++ b/canvas_modules/common-canvas/assets/styles/common-canvas.css
@@ -43,8 +43,7 @@
 	transition: all 0.2s;
 	z-index: 3;
 	box-shadow: -2px 0px 2px #E0E0E0;
-	overflow-x: scroll;
-	overflow-y: hidden;
+	overflow: hidden;
 	position: absolute;
 	right: 0px;
 }
