--- a/canvas_modules/harness/src/styles/App.css
+++ b/canvas_modules/harness/src/styles/App.css
@@ -13,7 +13,7 @@
 }
 
 .canvas-container {
-  height: calc(100vh - 50px);
+  height: calc(100% - 52px);
   width: 100%;
 }
 
